update cms instructions and flash msgs to reflect accordingly

--- a/cms.ci-connect.net/flash_messages/flash_messages.cfg
+++ b/cms.ci-connect.net/flash_messages/flash_messages.cfg
@@ -1,18 +1,18 @@
 [flash_messages]
-add_group_member = Successfully added member to project
-admin_group_member = Successfully updated member to admin status
-approve_subgroup = Successfully approved project creation
+add_group_member = Member has been added to the group
+admin_group_member = Member status has been updated to admin
+approve_subgroup = Subgroup creation has been approved
 create_group = Successfully created group
 create_login_node = Successfully created login node
-create_profile = Account registration successful. A request for Unix account activation on the OSG Connect job submission server has been forwarded to OSG staff.
-create_subgroup = Successfully created project
+create_profile = Account registration successful. A request for Unix account activation has been forwarded to CMS staff.
+create_subgroup = Successfully created subgroup
 delete_group = Successfully deleted group
-deny_subgroup = Denied project request
-edit_profile = Successfully updated profile information. UPDATED FROM NEW DIR.
-edit_subgroup = Successfully updated project information
-edit_subgroup_requests = The OSG support team has been notified of your updated project request
+deny_subgroup = Denied subgroup request
+edit_profile = Successfully updated profile information.
+edit_subgroup = Successfully updated subgroup information
+edit_subgroup_requests = The CMS support team has been notified of your updated subgroup request
 login_node_add_user = Successfully added user to login node
 login_node_remove_user = Successfully removed user from login node
-remove_group_member = Successfully removed member from project
-support = Successfully sent message to the OSG support team
+remove_group_member = Successfully removed member from group
+support = An email has been sent to the CMS Connect support team
 view_group = Successfully requested to join project
