--- a/cms.ci-connect.net/flash_messages/flash_messages.cfg
+++ b/cms.ci-connect.net/flash_messages/flash_messages.cfg
@@ -2,17 +2,17 @@
 add_group_member = Member has been added to the group
 admin_group_member = Member status has been updated to admin
 approve_subgroup = Subgroup creation has been approved
-create_group = Successfully created group
-create_login_node = Successfully created login node
+create_group = Your group has been created
+create_login_node = Login node has been created
 create_profile = Account registration successful. A request for Unix account activation has been forwarded to CMS staff.
-create_subgroup = Successfully created subgroup
-delete_group = Successfully deleted group
+create_subgroup = You have created a subgroup
+delete_group = Group has been deleted
 deny_subgroup = Denied subgroup request
-edit_profile = Successfully updated profile information.
-edit_subgroup = Successfully updated subgroup information
+edit_profile = Your profile information has been updated
+edit_subgroup = Subgroup information has been updated
 edit_subgroup_requests = The CMS support team has been notified of your updated subgroup request
-login_node_add_user = Successfully added user to login node
-login_node_remove_user = Successfully removed user from login node
-remove_group_member = Successfully removed member from group
-support = An email has been sent to the CMS Connect support team
-view_group = Successfully requested to join project
+login_node_add_user = User has been added to login node
+login_node_remove_user = User has been removed from login node
+remove_group_member = User has been removed from group
+support = You message has been sent to the CMS Connect support team
+view_group = Request sent to project administrators
