--- a/atlas.ci-connect.net/flash_messages/flash_messages.cfg
+++ b/atlas.ci-connect.net/flash_messages/flash_messages.cfg
@@ -4,15 +4,15 @@ admin_group_member = Successfully updated member to admin status
 approve_subgroup = Successfully approved project creation
 create_group = Successfully created group
 create_login_node = Successfully created login node
-create_profile = Account registration successful. A request for Unix account activation on the OSG Connect job submission server has been forwarded to OSG staff.
+create_profile = Account registration successful. A request for Unix account activation has been forwarded to Atlas CI-Connect staff.
 create_subgroup = Successfully created project
 delete_group = Successfully deleted group
 deny_subgroup = Denied project request
-edit_profile = Successfully updated profile information. UPDATED FROM NEW DIR.
+edit_profile = Successfully updated profile information.
 edit_subgroup = Successfully updated project information
-edit_subgroup_requests = The OSG support team has been notified of your updated project request
+edit_subgroup_requests = The Atlas CI-Connect support team has been notified of your updated project request
 login_node_add_user = Successfully added user to login node
 login_node_remove_user = Successfully removed user from login node
 remove_group_member = Successfully removed member from project
-support = Successfully sent message to the OSG support team
+support = Successfully sent message to the Atlas CI-Connect support team
 view_group = Successfully requested to join project
